--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="../build/bundle.js"></script>
-  </body>
+    <script src="build/js/bundle.js"></script>
+</body>
 </html>
